<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <item
        android:id="@+id/more"
        android:icon="@drawable/more"
        android:iconTint="?android:textColorPrimary"
        android:title=""
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/refreshApp"
                android:icon="@drawable/refresh"
                android:iconTint="@color/black"
                android:title="@string/refresh"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/changeLanguage"
                android:icon="@drawable/language"
                android:iconTint="@color/black"
                android:title="@string/changeLanguage"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:iconTint="@color/black"
                android:title="@string/logout"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>