<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegistrasiActivity">

    <ImageView
        android:id="@+id/registerImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reg"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/registerImage"
        app:layout_constraintStart_toStartOf="@+id/registerImage"
        app:layout_constraintTop_toBottomOf="@id/registerImage" />

    <TextView
        android:id="@+id/registerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/newStory"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitle" />

    <com.ditooard.aplikasistoryapp.ui.customView.NameValid
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/nameUser"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/registerDescription"
        app:layout_constraintStart_toStartOf="@+id/registerDescription"
        app:layout_constraintTop_toBottomOf="@id/registerDescription" />

    <com.ditooard.aplikasistoryapp.ui.customView.EmailValid
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/mailUser"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/registerDescription"
        app:layout_constraintStart_toStartOf="@+id/registerDescription"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />

    <com.ditooard.aplikasistoryapp.ui.customView.PasswordValidator
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_visible_on"
        android:hint="@string/passUser"
        android:inputType="textPassword"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/registerDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerDescription"
        app:layout_constraintTop_toTopOf="parent" />

    <com.ditooard.aplikasistoryapp.ui.customView.PasswordMatchValidator
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_visible_on"
        android:hint="@string/confirmPassUser"
        android:inputType="textPassword"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/registerDescription"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/registerDescription"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="615dp"
        android:layout_marginEnd="16dp"
        android:text="@string/daftar"
        app:layout_constraintEnd_toEndOf="@+id/registerDescription"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/registerDescription"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
