<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/scrollView">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        tools:context=".userinterface.DetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="?android:textColorPrimary">
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/UserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="Nama User" />

        <ImageView
            android:id="@+id/imageDetailStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imageStoryDesc"
            app:layout_constraintEnd_toEndOf="@+id/Descript"
            app:layout_constraintStart_toStartOf="@+id/Descript"
            app:layout_constraintTop_toBottomOf="@+id/Descript"
            app:srcCompat="@drawable/blank_photo" />

        <TextView
            android:id="@+id/Descript"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/UserName"
            app:layout_constraintStart_toStartOf="@+id/UserName"
            app:layout_constraintTop_toBottomOf="@+id/UserName"
            tools:text="Deskripsi Story" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/waktuStory"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/imageDetailStory"
            app:layout_constraintTop_toBottomOf="@+id/imageDetailStory" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            tools:text="TextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>